# kalshi_for_my_fox_one

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: research-plan.md
src/kalshi_mlb_research/: __init__.py  cli.py  config.py  exceptions.py  research_io.py  sample_data.py  time_utils.py
src/kalshi_mlb_research/backtest/: __init__.py  fill_simulator.py  latency_simulator.py  metrics.py  replay.py
src/kalshi_mlb_research/execution/: __init__.py  edge.py  executable_price.py  fee_model.py  paper_broker.py  risk_manager.py
src/kalshi_mlb_research/kalshi/: __init__.py  auth.py  market_discovery.py  orderbook.py  rest_client.py  schemas.py  ws_client.py
src/kalshi_mlb_research/mlb/: __init__.py  client.py  event_normalizer.py  schemas.py  state_parser.py  team_mapping.py
src/kalshi_mlb_research/models/: __init__.py  baseline_mlb_wp.py  calibration.py  market_prior.py  run_expectancy.py
src/kalshi_mlb_research/odds/: __init__.py  client.py  implied_prob.py  prior.py  schemas.py
src/kalshi_mlb_research/reports/: __init__.py  calibration_report.py  common.py  data_quality_report.py  edge_report.py  latency_report.py  pnl_report.py
src/kalshi_mlb_research/storage/: duckdb_store.py  parquet_writer.py  schemas.py
tests/: test_edge.py  test_executable_price.py  test_market_mapping.py  test_mlb_state_parser.py  test_model.py  test_orderbook.py  test_paper_broker.py  test_real_workflows.py  test_replay.py  test_risk_manager.py
