[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kalshi-mlb-research"
version = "0.1.9"
description = "MLB + Kalshi prediction-market research, replay, and paper-trading system."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jerry Chuang" }]
dependencies = [
  "cryptography>=42.0.0",
  "duckdb>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "typer>=0.12.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
ksr = "kalshi_mlb_research.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_mlb_research"]

[tool.hatch.build.targets.sdist]
include = ["src/kalshi_mlb_research", "tests", "README.md", "pyproject.toml"]
